# persona-audit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  modal-live.yml
backend/: __init__.py  paths.py  scores_io.py
backend/adapters/: __init__.py
backend/api/: __init__.py  app.py  assistant_traits.py  audit_data.py  cache.py  catalog.py  character.py  db.py  flags.py  hermes.py  models.py  neon_scores.py  paper_assets.py  persona_analytics.py  persona_vectors.py  provider.py  registry.py  score_cache.py  scoring_spaces.py  session_analytics.py  stats.py  tail.py  tau2_loader.py  trace_io.py  trace_source.py
backend/demo/: __init__.py  checkin.py  normalize.py  personas.py  report_html.py  rounds.py  run_lock.py  seeds.py  separation.py  state.py  transcript_qa.py
backend/docs/: maintenance.md
backend/scripts/: bootstrap_modal.py  build_demo_score_cache.py  demo_hillclimb.py  run_xenon_workflow.sh  upload_hermes_scores.py  upload_hermes_scores_to_neon.py  upload_local_data.py  upload_local_data_to_neon.py  upload_tau2_scores.py  upload_tau2_scores_to_neon.py
backend/workflows/: common.py  demo_generation.py  demo_scoring.py  hermes_scoring.py  tau2_scoring.py
data/demo/: README.md
data/hermes_demo/: README.md  manifest.json  normalized_traces.json
data/neon_score_summaries/: wr_667d470028fd_c294c37f.json
data/score_summaries/: wr_667d470028fd_c294c37f.json
data/supplemental_scores/: persona_audit_hermes_demo_v1_assistant_trait_scores.json
docs/: adapter-contract.md  add-a-scoring-space.md  agent-quickstart.md  demo-dataset-handoff.md  demo-hillclimb.md  demo-monitoring-plan.md  llm-data-conversion-instructions.md  release-checklist.md  xenon-modal-runbook.md
docs/internal/: demo-dataset-build-plan.md  demo-hillclimb.md  demo-monitoring-plan.md  focus-group-compare.md  focus-group.md
factory/: README.md  __init__.py
factory/hillclimb/: __init__.py  checkin.py  normalize.py  personas.py  rounds.py  (+6 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
tests/: conftest.py  test_analytics_units.py  test_api.py  test_behavior_audit_api.py  test_behavior_audit_character.py  test_behavior_audit_hygiene.py  test_behavior_audit_integrity.py  test_behavior_audit_local_data_upload.py  test_behavior_audit_provider_threading.py  test_behavior_audit_score_access.py  test_behavior_audit_stats.py  test_behavior_audit_tau2_loader.py  test_behavior_audit_trace_source.py  test_character.py  test_demo_structure.py  test_hermes_adapter.py  test_hygiene.py  test_integrity.py  test_local_data_upload.py  test_provider_threading.py  test_registry.py  test_score_access.py  test_scores_io.py  test_serving.py  test_tail.py  test_trace_source.py  test_track_comparison.py  test_workflow_builders.py  test_workflow_plans.py
(+75 files in other folders)
